api/check_out.txt
    Checking caxur v0.1.0 (/Users/dmn/jeprox/tools/caxur-fs/api)
error[E0433]: failed to resolve: could not find `__path_create_admin` in `administrators`
  --> src/presentation/openapi.rs:19:10
   |
19 | #[derive(OpenApi)]
   |          ^^^^^^^ could not find `__path_create_admin` in `administrators`
   |
   = note: this error originates in the derive macro `OpenApi` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `__path_create_admin` in module `crate::presentation::admin::handlers::administrators`
   --> src/presentation/openapi.rs:19:10
    |
 19 |   #[derive(OpenApi)]
    |            ^^^^^^^
    |
   ::: src/presentation/admin/handlers/administrators.rs:274:1
    |
274 | / #[utoipa::path(
275 | |     put,
276 | |     path = "/api/v1/admin/administrators/{id}",
277 | |     params(
...   |
290 | |     tag = "Admin / Administrator Management"
291 | | )]
    | |__- similarly named struct `__path_update_admin` defined here
    |
    = note: this error originates in the derive macro `OpenApi` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<JwtAuthService, anyhow::Error>: AuthService` is not satisfied
   --> src/presentation/admin/handlers/administrators.rs:143:66
    |
143 |     let use_case = CreateAdministratorUseCase::new(repo, hasher, auth_service, email_service, admin_url);
    |                                                                  ^^^^^^^^^^^^ the trait `AuthService` is not implemented for `Result<JwtAuthService, anyhow::Error>`
    |
    = help: the trait `AuthService` is implemented for `JwtAuthService`
    = note: required for the cast from `Arc<Result<JwtAuthService, anyhow::Error>>` to `Arc<(dyn AuthService + 'static)>`

error[E0277]: the trait bound `Result<JwtAuthService, anyhow::Error>: AuthService` is not satisfied
   --> src/presentation/admin/handlers/administrators.rs:510:57
    |
510 |     let use_case = ResendVerificationUseCase::new(repo, auth_service, email_service, admin_url);
    |                                                         ^^^^^^^^^^^^ the trait `AuthService` is not implemented for `Result<JwtAuthService, anyhow::Error>`
    |
    = help: the trait `AuthService` is implemented for `JwtAuthService`
    = note: required for the cast from `Arc<Result<JwtAuthService, anyhow::Error>>` to `Arc<(dyn AuthService + 'static)>`

error[E0277]: the trait bound `Result<JwtAuthService, anyhow::Error>: AuthService` is not satisfied
   --> src/presentation/admin/handlers/administrators.rs:539:59
    |
539 |     let use_case = VerifyAndSetPasswordUseCase::new(repo, auth_service, hasher);
    |                                                           ^^^^^^^^^^^^ the trait `AuthService` is not implemented for `Result<JwtAuthService, anyhow::Error>`
    |
    = help: the trait `AuthService` is implemented for `JwtAuthService`
    = note: required for the cast from `Arc<Result<JwtAuthService, anyhow::Error>>` to `Arc<(dyn AuthService + 'static)>`

Some errors have detailed explanations: E0277, E0412, E0433.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `caxur` (lib) due to 5 previous errors
